[project]
name = "opencv"
version = "0.1.0"
description = ""
authors = [
    {name = "sandrorsjunior",email = "sandrorsjunior@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.10.0,<7.0.0)",
    "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)"
]

[tool.poetry]
packages = [{include = "opencv", from = "src"}]


[tool.poetry.group.dev.dependencies]
pyqt5designer = "^5.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
